--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,6 @@
 
 <body>
   <h1> TinyApp </h1>
-  <a href = "#">Create New TinyURL</a>
+  <a href = "/urls/new">Create New TinyURL</a>
 </body>
 </html>
