added a delete functionality where you can delete url from your index

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,6 +32,11 @@
       <tr>
       <th scope="col"> <%= key %> </th>
       <th scope="col"> <%= urls[key] %> </th>
+      <th scope="col">
+        <form method="POST" action="/urls/<%= key %>/delete">
+          <button type="submit" value = 'delete'>delete</button>
+      </form>
+  </th>
     </tr>
   <% }) %>
 </thread>
