clean up and added functionality to be able to click directly to website on index page

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,7 +31,7 @@
     <% Object.keys(urls).forEach(function(key) { %>
       <tr>
       <th scope="col"> <%= key %> </th>
-      <th scope="col"> <%= urls[key] %> </th>
+      <th scope="col"> <a href = "<%= urls[key] %>"> <%= urls[key] %> </a> </th>
       <th scope="col">
         <form method="POST" action="/urls/<%= key %>/delete">
           <button type="submit" value = 'delete'>delete</button>
