--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -20,17 +20,23 @@
 </head>
 
 <body style="font-size:20px; padding:50px;">
-  <header>
-      <% include ./partials/_header %>
-  </header>
+  <h1><b> TinyApp </b></h1>
     <!-- Add EJS code here -->
-    <h3> <b>Tiny URL for <%= longURL %> </b></h3>
-    <p> <%=shortURL %> </p>
-    <form method="POST" action="/urls/<%= shortURL %>/update">
-         <p> <input name = "longURL" value = <% longURL %>></p>
-          <button type="submit">Edit</button>
-      </form>
-      <a href = "/urls">Go back to your index</a>
+    <h2> LOGIN </h2>
+    <form method="POST" action="/login">
+         <p>
+          Email :
+          <input name = "email" type = "email"l>
+        </p>
+        <p>
+          Password:
+          <input name = "password" type = "password">
+        </p>
+        <button type="submit">
+        Submit
+        </button>
+    </form>
+    <% if(error[0]) { %>
+      <p> <%= error[1]%> </p>
+    <% } %>
 </body>
-
-</html>
