--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,11 +9,13 @@
 <body>
   <h1> TinyApp </h1>
    <% if(user_id !== undefined) {%>
-   <p> Logged In as <%= user_id.email %> ! </p>
    <form method = "POST" action = "/logout">
-  <p><a href = "/urls/new">Create New TinyURL</a></p>
+    <p>
+      <a href = "/urls/new">Create New TinyURL</a>
+    </p>
     <button type="submit">Logout</button>
   </form>
+   <p> Logged In as <%= user_id.email %> ! </p>
     <%} else {%>
   <p><a href='/login'> Login </a></p>
   <p><a href='/register'> Register </a></p>
