added conditions so user who logged cannot loggin or register again some commenting of code

--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -36,6 +36,7 @@
         Submit
         </button>
     </form>
+    <p> Don't have an account yet ??? <a href = '/register'> Register Here </a></p>
     <% if(error[0]) { %>
       <p> <%= error[1]%> </p>
     <% } %>
