--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -39,6 +39,7 @@
     <% if(error[0]) { %>
       <p><%= error[1] %> </p>
     <% } %>
+    <p>Alread Registered?  <a href = '/login'> Login Here</a></p>
 </body>
 
 </html>
